@@ -20,7 +20,6 @@ import com.android.common.SdkConstants;
 
 import com.android.sdklib.internal.build.SignedJarBuilder.IZipEntryFilter;
 import com.android.sdklib.internal.build.SignedJarBuilder.IZipEntryFilter.ZipAbortException;
-import sun.misc.BASE64Encoder;
 import sun.security.pkcs.ContentInfo;
 import sun.security.pkcs.PKCS7;
 import sun.security.pkcs.SignerInfo;
@@ -44,6 +43,7 @@ import java.security.PrivateKey;
 import java.security.Signature;
 import java.security.SignatureException;
 import java.security.cert.X509Certificate;
+import java.util.Base64;
 import java.util.Map;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
@@ -105,7 +105,7 @@ public class SignedJarBuilder {
   private PrivateKey mKey;
   private X509Certificate mCertificate;
   private Manifest mManifest;
-  private BASE64Encoder mBase64Encoder;
+  private Base64.Encoder mBase64Encoder;
   private MessageDigest mMessageDigest;
 
   private byte[] mBuffer = new byte[4096];
@@ -118,15 +118,13 @@ public class SignedJarBuilder {
    * @param key the {@link PrivateKey} used to sign the archive, or <code>null</code>.
    * @param certificate the {@link X509Certificate} used to sign the archive, or
    * <code>null</code>.
-   * @param compressionLevel the compression level for JAR entries to be deflated.
    * @throws IOException
    * @throws NoSuchAlgorithmException
    */
-  public SignedJarBuilder(OutputStream out, PrivateKey key, X509Certificate certificate,
-      int compressionLevel)
+  public SignedJarBuilder(OutputStream out, PrivateKey key, X509Certificate certificate)
       throws IOException, NoSuchAlgorithmException {
     mOutputJar = new JarOutputStream(new BufferedOutputStream(out));
-    mOutputJar.setLevel(compressionLevel);
+    mOutputJar.setLevel(9);
     mKey = key;
     mCertificate = certificate;
 
@@ -136,7 +134,7 @@ public class SignedJarBuilder {
       main.putValue("Manifest-Version", "1.0");
       main.putValue("Created-By", "1.0 (Android)");
 
-      mBase64Encoder = new BASE64Encoder();
+      mBase64Encoder = Base64.getMimeEncoder();
       mMessageDigest = MessageDigest.getInstance(DIGEST_ALGORITHM);
     }
   }
@@ -289,7 +287,7 @@ public class SignedJarBuilder {
         attr = new Attributes();
         mManifest.getEntries().put(entry.getName(), attr);
       }
-      attr.putValue(DIGEST_ATTR, mBase64Encoder.encode(mMessageDigest.digest()));
+      attr.putValue(DIGEST_ATTR, mBase64Encoder.encodeToString(mMessageDigest.digest()));
     }
   }
 
@@ -301,7 +299,7 @@ public class SignedJarBuilder {
     main.putValue("Signature-Version", "1.0");
     main.putValue("Created-By", "1.0 (Android)");
 
-    BASE64Encoder base64 = new BASE64Encoder();
+    Base64.Encoder base64 = Base64.getMimeEncoder();
     MessageDigest md = MessageDigest.getInstance(DIGEST_ALGORITHM);
     PrintStream print = new PrintStream(
         new DigestOutputStream(new ByteArrayOutputStream(), md),
@@ -310,7 +308,7 @@ public class SignedJarBuilder {
     // Digest of the entire manifest
     mManifest.write(print);
     print.flush();
-    main.putValue(DIGEST_MANIFEST_ATTR, base64.encode(md.digest()));
+    main.putValue(DIGEST_MANIFEST_ATTR, base64.encodeToString(md.digest()));
 
     Map<String, Attributes> entries = mManifest.getEntries();
     for (Map.Entry<String, Attributes> entry : entries.entrySet()) {
@@ -323,7 +321,7 @@ public class SignedJarBuilder {
       print.flush();
 
       Attributes sfAttr = new Attributes();
-      sfAttr.putValue(DIGEST_ATTR, base64.encode(md.digest()));
+      sfAttr.putValue(DIGEST_ATTR, base64.encodeToString(md.digest()));
       sf.getEntries().put(entry.getKey(), sfAttr);
     }
 
